# DjangoDRF-blog

./: .dockerignore  .env.example  .gitignore  README-ru.md  README.md  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.staging.yml  pyproject.toml
.github/workflows/: django.yml
api/: urls.py
api/spectacular/: renderers.py
blog/: admin.py  constants.py  filters.py  managers.py  models.py  pagination.py  permissions.py  signals.py  urls.py
blog/api/: paginators.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/mixins/: views.py
blog/templatetags/: blog_extras.py
blog/tests/: test_admin.py  test_django_views.py  test_drf_views.py  test_models.py
blog/views/: comments.py  common.py  posts.py
common/: apps.py
common/middlewares/: ckeditor.py
common/migrations/: 0001_initial.py
common/mixins/: admin.py  ckeditor_bleach.py  serializers.py  views.py
common/models/: __init__.py  ckeditor.py  mixins.py
common/signals/: __init__.py  ckeditor.py
common/tasks/: image.py
common/tests/: test_celery_tasks.py  test_middlewares.py
config/: settings.py  spectacular-description.md  urls.py
docker/: Dockerfile
docker/nginx/: Dockerfile  custom_50x.html  default_location
docker/scripts/: debug-server-entrypoint.sh  server-entrypoint.sh
fixtures/: fixtures.json
rating/: mixins.py  models.py  urls.py  views.py
subscription/: admin.py  mixins.py  models.py  urls.py
templates/: 400.html  403.html  404.html  500.html  base.html  base_error.html
users/: admin.py  backends.py  forms.py  managers.py  models.py  urls.py
(+75 files in other folders)
